--- a/src/main/resources/org/example/diariosecreto/main.fxml
+++ b/src/main/resources/org/example/diariosecreto/main.fxml
@@ -59,7 +59,7 @@
                                  </children>
                               </GridPane>
                               <Separator layoutY="14.0" prefHeight="11.0" prefWidth="291.0" />
-                              <Button fx:id="btnCrearUsuario" layoutX="101.0" layoutY="145.0" mnemonicParsing="false" onAction="#crearUsuario" text="Crear Usuario" />
+                              <Button fx:id="btnCrearUsuario" layoutX="101.0" layoutY="145.0" mnemonicParsing="false" onAction="#crearAutor" text="Crear Usuario" />
                               <Separator layoutY="178.0" prefHeight="11.0" prefWidth="291.0" />
                            </children>
                         </AnchorPane>
