--- a/src/main/resources/org/example/diariosecreto/main.fxml
+++ b/src/main/resources/org/example/diariosecreto/main.fxml
@@ -1,74 +1,95 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.Reflection?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.diariosecreto.ViewController.MainViewController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.diariosecreto.ViewController.MainViewController">
    <children>
       <SplitPane orientation="VERTICAL" prefHeight="406.0" prefWidth="607.0">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                <children>
-                  <SplitPane dividerPositions="0.48756218905472637" prefHeight="418.0" prefWidth="605.0">
+                  <SplitPane dividerPositions="0.49087893864013266" prefHeight="418.0" prefWidth="605.0">
                     <items>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="416.0" prefWidth="304.0">
                            <children>
-                              <TableView fx:id="tableUsuario" layoutX="11.0" layoutY="196.0" prefHeight="189.0" prefWidth="267.0">
+                              <TableView fx:id="tableUsuario" layoutX="20.0" layoutY="195.0" prefHeight="189.0" prefWidth="255.0">
                                 <columns>
                                   <TableColumn fx:id="columnAutor" prefWidth="75.0" text="Autor" />
                                   <TableColumn fx:id="columnCorreo" prefWidth="95.0" text="Correo" />
                                     <TableColumn fx:id="columnDiario" prefWidth="96.0" text="Diario" />
                                 </columns>
                               </TableView>
-                              <GridPane layoutX="44.0" layoutY="32.0" prefHeight="104.0" prefWidth="204.0">
-                                <columnConstraints>
-                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                </columnConstraints>
-                                <rowConstraints>
-                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                </rowConstraints>
-                                 <children>
-                                    <GridPane prefHeight="39.0" prefWidth="156.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                                      <rowConstraints>
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                      </rowConstraints>
-                                       <columnConstraints>
-                                          <ColumnConstraints />
-                                       </columnConstraints>
-                                       <children>
-                                          <TextField fx:id="txtcorreo" GridPane.rowIndex="1" />
-                                       </children>
-                                    </GridPane>
-                                    <TextField fx:id="txtnombre" prefHeight="8.0" prefWidth="122.0" GridPane.columnIndex="1" />
-                                    <TextField fx:id="txtcontrasena" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                                    <Label text="Nombre" />
-                                    <Label text="Correo" GridPane.rowIndex="1" />
-                                    <Label text="Contraseña" GridPane.rowIndex="2" />
-                                 </children>
-                              </GridPane>
-                              <Separator layoutY="14.0" prefHeight="11.0" prefWidth="291.0" />
-                              <Button fx:id="btnCrearUsuario" layoutX="101.0" layoutY="145.0" mnemonicParsing="false" onAction="#crearAutor" text="Crear Usuario" />
-                              <Separator layoutY="178.0" prefHeight="11.0" prefWidth="291.0" />
+                              <TabPane layoutX="24.0" layoutY="20.0" prefHeight="169.0" prefWidth="249.0" tabClosingPolicy="UNAVAILABLE">
+                                <tabs>
+                                  <Tab text="Crear usuario">
+                                       <content>
+                                          <ScrollPane hbarPolicy="NEVER" prefHeight="200.0" prefWidth="200.0" vbarPolicy="NEVER">
+                                            <content>
+                                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="263.0">
+                                                   <children>
+                                                      <GridPane layoutX="8.0" layoutY="5.0" prefHeight="93.0" prefWidth="236.0">
+                                                        <columnConstraints>
+                                                          <ColumnConstraints hgrow="SOMETIMES" maxWidth="116.0" minWidth="10.0" prefWidth="90.0" />
+                                                          <ColumnConstraints hgrow="SOMETIMES" maxWidth="172.0" minWidth="10.0" prefWidth="145.0" />
+                                                        </columnConstraints>
+                                                        <rowConstraints>
+                                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                        </rowConstraints>
+                                                         <children>
+                                                            <TextField GridPane.columnIndex="1" />
+                                                            <TextField layoutX="110.0" layoutY="12.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                                            <TextField layoutX="110.0" layoutY="42.0" prefHeight="22.0" prefWidth="101.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                                            <Label text="Nombre:" />
+                                                            <Label layoutX="10.0" layoutY="16.0" text="Correo:" GridPane.rowIndex="1" />
+                                                            <Label layoutX="10.0" layoutY="46.0" text="Clave:" GridPane.rowIndex="2" />
+                                                         </children>
+                                                      </GridPane>
+                                                      <Button layoutX="81.0" layoutY="106.0" mnemonicParsing="false" text="Crear usuario" />
+                                                   </children>
+                                                   <effect>
+                                                      <Reflection />
+                                                   </effect>
+                                                </AnchorPane>
+                                            </content>
+                                          </ScrollPane>
+                                       </content>
+                                  </Tab>
+                                  <Tab text="Lista de usuarios">
+                                       <content>
+                                          <TableView prefHeight="138.0" prefWidth="248.0">
+                                            <columns>
+                                              <TableColumn prefWidth="124.0" text="Nombre" />
+                                              <TableColumn prefWidth="131.0" text="Correo" />
+                                            </columns>
+                                          </TableView>
+                                       </content></Tab>
+                                </tabs>
+                              </TabPane>
                            </children>
                         </AnchorPane>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="416.0" prefWidth="248.0">
                            <children>
-                              <TextArea fx:id="txtContenido" layoutX="26.0" layoutY="67.0" prefHeight="283.0" prefWidth="255.0" />
-                              <Button fx:id="btnGuardat" layoutX="199.0" layoutY="361.0" mnemonicParsing="false" onAction="#guardarDiario" text="Guardar" />
-                              <TextField fx:id="txtTitulo" layoutX="26.0" layoutY="32.0" prefHeight="25.0" prefWidth="255.0" promptText="Titulo" />
-                              <Button fx:id="btnVolver" layoutX="54.0" layoutY="361.0" mnemonicParsing="false" onAction="#consultarHistorial" text="Volver" />
+                              <TextArea fx:id="txtContenido" layoutX="26.0" layoutY="65.0" prefHeight="285.0" prefWidth="255.0" promptText="Contenido" wrapText="true" />
+                              <Button fx:id="btnGuardat" layoutX="170.0" layoutY="361.0" mnemonicParsing="false" onAction="#guardarDiario" text="Guardar" />
+                              <TextField fx:id="txtTitulo" layoutX="25.0" layoutY="22.0" prefHeight="32.0" prefWidth="255.0" promptText="Titulo" />
+                              <Button fx:id="btnVolver" layoutX="95.0" layoutY="361.0" mnemonicParsing="false" onAction="#consultarHistorial" text="Volver" />
                            </children>
                         </AnchorPane>
                     </items>
