--- a/src/main/resources/org/example/diariosecreto/main.fxml
+++ b/src/main/resources/org/example/diariosecreto/main.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.diariosecreto.ViewController.MainViewController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.diariosecreto.ViewController.MainViewController">
    <children>
       <SplitPane orientation="VERTICAL" prefHeight="406.0" prefWidth="607.0">
         <items>
@@ -53,15 +53,15 @@
                                                           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                                         </rowConstraints>
                                                          <children>
-                                                            <TextField GridPane.columnIndex="1" />
-                                                            <TextField layoutX="110.0" layoutY="12.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                                            <TextField layoutX="110.0" layoutY="42.0" prefHeight="22.0" prefWidth="101.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                                            <TextField fx:id="txtNombre" GridPane.columnIndex="1" />
+                                                            <TextField fx:id="txtCorreo" layoutX="110.0" layoutY="12.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                                            <TextField fx:id="txtClave" layoutX="110.0" layoutY="42.0" prefHeight="22.0" prefWidth="101.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                                                             <Label text="Nombre:" />
                                                             <Label layoutX="10.0" layoutY="16.0" text="Correo:" GridPane.rowIndex="1" />
                                                             <Label layoutX="10.0" layoutY="46.0" text="Clave:" GridPane.rowIndex="2" />
                                                          </children>
                                                       </GridPane>
-                                                      <Button layoutX="81.0" layoutY="106.0" mnemonicParsing="false" text="Crear usuario" />
+                                                      <Button fx:id="btnCrearUsuario" layoutX="81.0" layoutY="106.0" mnemonicParsing="false" onAction="#addUsuario" text="Crear usuario" />
                                                    </children>
                                                    <effect>
                                                       <Reflection />
@@ -73,7 +73,7 @@
                                   </Tab>
                                   <Tab text="Lista de usuarios">
                                        <content>
-                                          <TableView prefHeight="138.0" prefWidth="248.0">
+                                          <TableView fx:id="tbListaUsuarios" prefHeight="138.0" prefWidth="248.0">
                                             <columns>
                                               <TableColumn prefWidth="124.0" text="Nombre" />
                                               <TableColumn prefWidth="131.0" text="Correo" />
