--- a/src/main/resources/org/example/diariosecreto/guardar.fxml
+++ b/src/main/resources/org/example/diariosecreto/guardar.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
@@ -7,10 +11,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="226.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.diariosecreto.ViewController.GuardarViewController">
+<AnchorPane prefHeight="226.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.diariosecreto.ViewController.GuardarViewController">
    <children>
       <TextField fx:id="txtCorreo" layoutX="87.0" layoutY="95.0" promptText="Correo" />
-      <TextField fx:id="txtContrasena" layoutX="87.0" layoutY="140.0" promptText="Contraseña" />
       <Button layoutX="56.0" layoutY="183.0" mnemonicParsing="false" onAction="#cancelarGuardado" text="Cancelar" />
       <Button layoutX="207.0" layoutY="183.0" mnemonicParsing="false" onAction="#guardarDiario" text="Guardar" />
       <Label layoutX="18.0" layoutY="14.0" prefHeight="46.0" prefWidth="287.0" text="Para guardar ingrese sus credenciales">
@@ -19,5 +22,6 @@
          </font>
       </Label>
       <Separator layoutX="-3.0" layoutY="69.0" prefHeight="3.0" prefWidth="323.0" />
+      <PasswordField fx:id="txtContrasena" layoutX="87.0" layoutY="136.0" promptText="Contraseña" />
    </children>
 </AnchorPane>
